--- a/app/assets/custom.css
+++ b/app/assets/custom.css
@@ -1,28 +1,31 @@
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
-  
-  @keyframes slideIn {
-    from {
-      transform: translateY(10px);
-      opacity: 0;
-    }
-    to {
-      transform: translateY(0);
-      opacity: 1;
-    }
+  to {
+    opacity: 1;
   }
-  
-  .mt-4 {
-    animation: slideIn 0.5s ease-out;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
   }
-  
-  .text-light {
-    animation: fadeIn 1s ease-in;
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
-  
+}
+
+.mt-4 {
+  animation: slideIn 0.5s ease-out;
+}
+
+.text-light {
+  animation: fadeIn 1s ease-in;
+}
+
+.text {
+  color: white;
+}
